--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,11 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
     implementation 'com.squareup.retrofit2:retrofit:2.2.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.6.0'
+    implementation 'io.reactivex:rxjava:1.3.0'
+    implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation 'com.alibaba:fastjson:1.2.70'
+    implementation 'com.squareup.okhttp3:okhttp:4.7.2'
+//    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+//    implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
 }
